# brightlab_test_task

./: .gitignore  alembic.ini  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/auth/: dao.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  utils.py
app/background_tasks/: celery_config.py  tasks.py
app/dao/: base.py
app/migrations/: env.py
app/migrations/versions/: 2023_09_11_2105-8927dec68426_initial_migration.py  2023_09_11_2159-8e50930acff8_refreshsessions_was_added.py  2023_09_12_0242-a57a04e71996_refreshsessions_ondelete_added.py  2023_09_12_0334-62135c6481fd_added_task_taskuser_tables.py  2023_09_14_0054-6904cb86f998_added_ondelete_for_taskuser.py  2023_09_14_0104-7cd158c555f3_added_ondelete_for_taskuser_user_id.py  2023_09_14_0205-951374136c25_added_unique_constraint_to_taskuser.py  2023_09_15_0254-d7af124def0b_created_celerytask_model.py  2023_09_15_0317-29841c6c511a_added_ondelete_to_celerytask.py  2023_09_15_0345-992fe60eeb1f_added_completed_bool_to_task_model.py
app/services/: email_service.py
app/task/: dao.py  exceptions.py  models.py  router.py  schemas.py
tests/: conftest.py
tests/integration_tests/auth/: test_login.py
tests/integration_tests/task/: test_router.py
tests/mock_data/: task_users_mock.sql  tasks_mock.sql  users_mock.sql
tests/unit_tests/auth/: test_dao.py  test_utils.py
tests/unit_tests/services/: test_services.py
tests/unit_tests/task/: test_dao.py
